--- a/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.Batch.mdx
+++ b/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.Batch.mdx
@@ -142,7 +142,7 @@ python_api_name: qiskit_ibm_runtime.Batch
 
   ### details
 
-  <Function id="qiskit_ibm_runtime.Batch.details" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/session.py#L291-L333" signature="details()">
+  <Function id="qiskit_ibm_runtime.Batch.details" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/session.py#L305-L347" signature="details()">
     Return session details.
 
     **Return type**
@@ -171,7 +171,7 @@ python_api_name: qiskit_ibm_runtime.Batch
 
   ### from\_id
 
-  <Function id="qiskit_ibm_runtime.Batch.from_id" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/session.py#L353-L386" signature="from_id(session_id, service)" modifiers="classmethod">
+  <Function id="qiskit_ibm_runtime.Batch.from_id" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/session.py#L367-L400" signature="from_id(session_id, service)" modifiers="classmethod">
     Construct a Session object with a given session\_id
 
     **Parameters**
@@ -234,6 +234,20 @@ python_api_name: qiskit_ibm_runtime.Batch
     *   `In progress, not accepting new jobs`: session is active and not accepting new jobs.
     *   `Closed`: max\_time expired or session was explicitly closed.
     *   `None`: status details are not available.
+  </Function>
+
+  ### usage
+
+  <Function id="qiskit_ibm_runtime.Batch.usage" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/session.py#L291-L303" signature="usage()">
+    Return session usage in seconds.
+
+    Session usage is the time from when the first job starts until the session goes inactive, is closed, or when its last job completes, whichever happens last.
+
+    Batch usage is the amount of time all jobs spend on the QPU.
+
+    **Return type**
+
+    `Optional`\[`float`]
   </Function>
 </Class>
 
