--- a/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.RuntimeJob.mdx
+++ b/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.RuntimeJob.mdx
@@ -238,7 +238,7 @@ python_api_name: qiskit_ibm_runtime.RuntimeJob
 
   ### error\_message
 
-  <Function id="qiskit_ibm_runtime.RuntimeJob.error_message" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/base_runtime_job.py#L195-L202" signature="error_message()">
+  <Function id="qiskit_ibm_runtime.RuntimeJob.error_message" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/base_runtime_job.py#L207-L214" signature="error_message()">
     Returns the reason if the job failed.
 
     **Return type**
@@ -326,16 +326,20 @@ python_api_name: qiskit_ibm_runtime.RuntimeJob
 
   ### metrics
 
-  <Function id="qiskit_ibm_runtime.RuntimeJob.metrics" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/base_runtime_job.py#L138-L150" signature="metrics()">
+  <Function id="qiskit_ibm_runtime.RuntimeJob.metrics" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/base_runtime_job.py#L146-L162" signature="metrics()">
     Return job metrics.
-
-    **Return type**
-
-    `Dict`\[`str`, `Any`]
 
     **Returns**
 
-    Job metrics, which includes timestamp information.
+    *   `timestamps`: Timestamps of when the job was created, started running, and finished.
+
+    *   **`usage`: Details regarding job usage, the measurement of the amount of**
+
+        time the QPU is locked for your workload.
+
+    **Return type**
+
+    A dictionary with job metrics including but not limited to the following
 
     **Raises**
 
@@ -344,7 +348,7 @@ python_api_name: qiskit_ibm_runtime.RuntimeJob
 
   ### properties
 
-  <Function id="qiskit_ibm_runtime.RuntimeJob.properties" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/base_runtime_job.py#L181-L193" signature="properties(refresh=False)">
+  <Function id="qiskit_ibm_runtime.RuntimeJob.properties" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/base_runtime_job.py#L193-L205" signature="properties(refresh=False)">
     Return the backend properties for this job.
 
     **Parameters**
@@ -498,7 +502,7 @@ python_api_name: qiskit_ibm_runtime.RuntimeJob
 
   ### update\_tags
 
-  <Function id="qiskit_ibm_runtime.RuntimeJob.update_tags" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/base_runtime_job.py#L152-L179" signature="update_tags(new_tags)">
+  <Function id="qiskit_ibm_runtime.RuntimeJob.update_tags" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/base_runtime_job.py#L164-L191" signature="update_tags(new_tags)">
     Update the tags associated with this job.
 
     **Parameters**
@@ -516,6 +520,16 @@ python_api_name: qiskit_ibm_runtime.RuntimeJob
     **Raises**
 
     **IBMApiError** – If an unexpected error occurred when communicating with the server or updating the job tags.
+  </Function>
+
+  ### usage
+
+  <Function id="qiskit_ibm_runtime.RuntimeJob.usage" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/base_runtime_job.py#L138-L144" signature="usage()">
+    Return job usage in seconds.
+
+    **Return type**
+
+    `float`
   </Function>
 
   ### wait\_for\_final\_state
