--- a/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.Session.mdx
+++ b/docs/api/qiskit-ibm-runtime/dev/qiskit_ibm_runtime.Session.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit_ibm_runtime.Session
 
 # Session
 
-<Class id="qiskit_ibm_runtime.Session" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/session.py#L47-L399" signature="Session(service=None, backend=None, max_time=None)" modifiers="class">
+<Class id="qiskit_ibm_runtime.Session" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/session.py#L47-L413" signature="Session(service=None, backend=None, max_time=None)" modifiers="class">
   Class for creating a Qiskit Runtime session.
 
   A Qiskit Runtime `session` allows you to group a collection of iterative calls to the quantum computer. A session is started when the first job within the session is started. Subsequent jobs within the session are prioritized by the scheduler.
@@ -124,7 +124,7 @@ python_api_name: qiskit_ibm_runtime.Session
 
   ### details
 
-  <Function id="qiskit_ibm_runtime.Session.details" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/session.py#L291-L333" signature="details()">
+  <Function id="qiskit_ibm_runtime.Session.details" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/session.py#L305-L347" signature="details()">
     Return session details.
 
     **Return type**
@@ -153,7 +153,7 @@ python_api_name: qiskit_ibm_runtime.Session
 
   ### from\_id
 
-  <Function id="qiskit_ibm_runtime.Session.from_id" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/session.py#L353-L386" signature="from_id(session_id, service)" modifiers="classmethod">
+  <Function id="qiskit_ibm_runtime.Session.from_id" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/session.py#L367-L400" signature="from_id(session_id, service)" modifiers="classmethod">
     Construct a Session object with a given session\_id
 
     **Parameters**
@@ -216,6 +216,20 @@ python_api_name: qiskit_ibm_runtime.Session
     *   `In progress, not accepting new jobs`: session is active and not accepting new jobs.
     *   `Closed`: max\_time expired or session was explicitly closed.
     *   `None`: status details are not available.
+  </Function>
+
+  ### usage
+
+  <Function id="qiskit_ibm_runtime.Session.usage" github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/main/qiskit_ibm_runtime/session.py#L291-L303" signature="usage()">
+    Return session usage in seconds.
+
+    Session usage is the time from when the first job starts until the session goes inactive, is closed, or when its last job completes, whichever happens last.
+
+    Batch usage is the amount of time all jobs spend on the QPU.
+
+    **Return type**
+
+    `Optional`\[`float`]
   </Function>
 </Class>
 
