--- a/docs/guides/index.mdx
+++ b/docs/guides/index.mdx
@@ -11,7 +11,7 @@ In addition, many open-source projects are part of the broader Qiskit ecosystem.
 
 ![All Qiskit pattern steps are shown (Map problem, Optimize for hardware, Execute on hardware, and Post-process results). All steps, except for 'Execute on hardware', use the Qiskit SDK. 'Optimizing for hardware' additionally uses the Qiskit Transpiler Service.  'Executing on hardware' uses only the Qiskit Runtime Service.](/images/qiskit-patterns/patterns.svg)
 
-IBM is committed to the responsible development of quantum computing. Learn more and review our responsible quantum principles in the [Responsible quantum computing and inclusive tech](/responsible-quantum-computing) topic.
+IBM is committed to the responsible development of quantum computing. Learn more and review our responsible quantum principles in the [Responsible quantum computing](/responsible-quantum-computing) topic.
 
 ## The Qiskit SDK
 
