--- a/docs/guides/qiskit-code-assistant-jupyterlab.mdx
+++ b/docs/guides/qiskit-code-assistant-jupyterlab.mdx
@@ -43,7 +43,7 @@ It is recommended that you edit the following JupyterLab settings by going to Se
 
 - Click **Inline Completer**, find "Show widget" and choose **Always**.  This means that the the inline completer widget will always be shown so you can cycle through and select a completion item.
 
-- Click **Code Completion** and increase the value for "Default timeout for a provider." to `10000` or 10 seconds. The default value is 1 second, but the Qiskit Code Assistant API might take longer than this to find a suggstion. This setting only applies to the standard context menu that is invoked with `Tab`. The inline completer has a default of 10 seconds.
+- Click **Code Completion** and increase the value for "Default timeout for a provider." to `10000` or 10 seconds. The default value is 1 second, but the Qiskit Code Assistant API might take longer than this to find a suggestion. This setting only applies to the standard context menu that is invoked with `Tab`. The inline completer has a default of 10 seconds.
 
 Other settings you might want to change:
 
