--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -40,7 +40,7 @@
     "    \"\"\"Transpiles an abstract circuit (or list of circuits) into an ISA circuit for a given backend.\"\"\"\n",
     "    pass_manager = generate_preset_pass_manager(\n",
     "        optimization_level=optimization_level,\n",
-    "\t\tbackend=service.backend(backend)\n",
+    "        backend=service.backend(backend)\n",
     "    )\n",
     "    isa_circuit = pass_manager.run(circuit)\n",
     "    return isa_circuit"
@@ -179,6 +179,7 @@
     "\n",
     "# Upload the tar to Serverless data directory\n",
     "from qiskit_serverless import IBMServerlessClient\n",
+    "\n",
     "serverless = IBMServerlessClient()\n",
     "serverless.file_upload(filename)"
    ]
