--- a/docs/guides/qiskit-transpiler-service.mdx
+++ b/docs/guides/qiskit-transpiler-service.mdx
@@ -96,13 +96,13 @@ The following examples demonstrate how to transpile circuits using the Qiskit Tr
 
 ## Limits of the Qiskit Transpiler Service
 
-The following lists the most relevant limits of the service:
+Following are the most relevant limitations of the service:
 
-- The Qiskit Transpiler Service transpiling up to 1 million two-qubit gates in either `ai` mode `ai="true"`, `ai="false"` or `ai="auto"`.
+- The Qiskit Transpiler Service can transpile up to 1 million two-qubit gates in either `ai` mode `ai="true"`, `ai="false"` or `ai="auto"`.
 - The maximum time allowed to run a transpilation process is 30 minutes.
-- The maximum time to retrieve a transpilation result from the service after the transpilation process ends is 20 minutes. After 20 minutes, your job will be removed.
-- The maximum time a set of circuits can live in the internal queue while waiting to be transpiled is 120 minutes. After that time, if the job has not been transpiled, it will be discarded.
-- The maximum number of qubits has not been determined. The service has been tested up to 900+ qubits.
+- You must retrieve the transpilation result from the service within 20 minutes after the transpilation process ends. After 20 minutes, your job is removed.
+- The maximum time a set of circuits can live in the internal queue while waiting to be transpiled is 120 minutes. After that time, if the job has not been transpiled, it is discarded.
+- The maximum number of qubits has not been determined. The service has been tested on 900+ qubits.
 
 ## Citation
 
