--- a/docs/guides/job-limits.mdx
+++ b/docs/guides/job-limits.mdx
@@ -9,16 +9,16 @@ When you send a job to an IBM&reg; QPU, it is first sent to the job validation s
 
 <Admonition type="note">
 Certain primitive options increase the circuit size.  The described limits are checked _after_ the expected increase in circuit size. In particular, these options increase circuit size:
-  - Dynamical decoupling introduces additional 1-qubit gates that are included in the instructions for the [Maximum number of low-level instructions per qubit](#per-qubit) limit.
-  - Gate-folding ZNE introduces additional 2-qubit gates relevant to the [Maximum number of 2-qubit gates per job](#2-cubit-limit) limit. The number of 2-qubit gates is multiplied by the largest noise factor requested in gate-folding ZNE.
+  - Dynamical decoupling introduces additional single-qubit gates that are included in the instructions for the [Maximum number of low-level instructions per qubit](#per-qubit) limit.
+  - Gate-folding ZNE introduces additional two-qubit gates relevant to the [Maximum number of two-qubit gates per job](#2-qubit-limit) limit. The number of two-qubit gates is multiplied by the largest noise factor requested in gate-folding ZNE.
 </Admonition>
 
 <span id="max-shots"></span>
 ## Maximum executions
 
-At most **5 million** executions are allowed.  The number of executions is the number of circuits times the number of shots, where the circuits are those generated after PUB elements are broadcasted.
+At most, **5 million** executions are allowed.  The number of executions is the number of circuits times the number of shots, where the circuits are those generated after PUB elements are broadcasted.
 
-For example, if you have a PUB with 1 circuit, observables with shape (1, 6), and parameters with shape (4, 1), this would render 4 * 6 = 24 circuits (or fewer, if the observables are commutable). If you requested 2,000 shots, then total number of executions is 24 * 2,000 = 48,000.
+For example, if you have a PUB with one circuit, observables with shape (1, 6), and parameters with shape (4, 1), this would render 4 * 6 = 24 circuits (or fewer, if the observables are commutable). If you requested 2,000 shots, then the total number of executions is 24 * 2,000 = 48,000.
 
 <span id="per-qubit"></span>
 ## Maximum number of low-level instructions per qubit
@@ -39,6 +39,6 @@ The system permits up to **32 million instructions per qubit**. This ensures tha
 | `init`        | 50    |
 
 <span id="2-qubit-limit"></span>
-## Maximum number of 2-qubit gates per job
+## Maximum number of two-qubit gates per job
 
-This ensures that the job can be manipulated within the memory limits of the low-level software stack. The actual limit depends on the options selected in the Sampler or Estimator query. However, the 2-qubit gate limit per job lower bound is **10,000 2-qubit gates**. That is, if a job has fewer than 10,000 2-qubit gates, it typically passes validation. Some jobs might allow more, and the service will calculate the limit allowed for the user-selected options and communicate that in the validation error message.
+This ensures that the job can be manipulated within the memory limits of the low-level software stack. The actual limit depends on the options selected in the Sampler or Estimator query. However, the two-qubit gate limit per job lower bound is **10,000 two-qubit gates**. That is, if a job has fewer than 10,000 two-qubit gates, it typically passes validation. Some jobs might allow more, and the service will calculate the limit allowed for the user-selected options and communicate that in the validation error message.
