--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -66,7 +66,7 @@ When a job is failed or canceled, the reported usage is as follows:
 <span id="ittl-by-mode"></span>
 ## Interactive time to live (ITTL)
 
-The [interactive time to live (ITTL)](/guides/max-execution-time#session-maximum-execution-time) in batch mode is one second for all instances.
+The [ITTL](/guides/max-execution-time#session-maximum-execution-time) in batch mode is one second for all instances.
 
 The ITTL for a session (Premium Plan users only) is 60 seconds, unless there is an instance-specific configuration that dictates a different ITTL.
 
