--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -32,7 +32,7 @@ You can open a runtime session by using the context manager `with Session(...)` 
 class. When you start a session,  you must specify a QPU by passing a `backend` object. The session starts when its first job begins execution.
 
 <Admonition type="note">
-If you open a session but do not submit any jobs to it for 30 minutes, the session will automatically close.
+If you open a session but do not submit any jobs to it for 30 minutes, the session automatically closes.
 </Admonition>
 
 
