--- a/docs/guides/execution-modes.mdx
+++ b/docs/guides/execution-modes.mdx
@@ -78,4 +78,6 @@ The ITTL for a session (Premium Plan users only) is 60 seconds, unless there is 
 
 *\* Certain Premium Plan instances might be specially configured to have a different ITTL.*
 
-Note that you can also programmatically query the ITTL; see details on the [Maximum execution time](/guides/max-execution-time#session-maximum-execution-time) page.
+<Admonition type="note">
+You can also programmatically query the ITTL; see details on the [Maximum execution time](/guides/max-execution-time#session-maximum-execution-time) page.
+</Admonition>
