--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -92,7 +92,7 @@
     "pubs = [(circuit, observable)]\n",
     "\n",
     "job = function.run(\n",
-    "  # Or `backend_name=backend_name`, if you didn't initialize a backend object\n",
+    "  # Use `backend_name=backend_name` if you didn't initialize a backend object\n",
     "  backend_name=backend.name,\n",
     "  pubs=pubs\n",
     ")"
