--- a/docs/guides/primitives-rest-api.mdx
+++ b/docs/guides/primitives-rest-api.mdx
@@ -58,9 +58,8 @@ url = 'https://api.quantum-computing.ibm.com/runtime/jobs'
 headers = {
     'Content-Type': 'application/json',
     'x-access-token':auth_id,
-    # Replace <your_application> with the name of your application. This is useful to understand
-    # where jobs are coming from. Note that the prefix "qiskit-version-2/0.39.2/" is necessary.
-    'x-qx-client-application': f'qiskit-version-2/0.39.2/<your_application>',
+    # The following is useful to help you understand where jobs are coming from.
+    'x-qx-client-application': f'<package>/<version>/<your_application>',
     }
 job_input = {
     'program_id': 'estimator',
