--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -354,7 +354,7 @@
     "\n",
     "We are committed to providing you with prompt and effective support to ensure you have the best possible experience with our Qiskit Function.\n",
     "\n",
-    "We are always looking to improve our product and we welcome your suggestions! If you have ideas on how we can enhance our services or features you'd like to see, please send us your thoughts to support@qedma.com"
+    "We are always looking to improve our product and we welcome your suggestions! If you have ideas on how we can enhance our services or features you'd like to see, please send us your thoughts at support@qedma.com"
    ]
   },
   {
